--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
 <html>
-     <h1>bonfim</h1>Karol
-</html>
+     <!--formatação de textos-->
+     <b>Texto em negrito</b>
+     <br>
+     <strong>Texto importante</strong>
+     <br>
+     <i>Texto itálico</i>
+     <br>
+     <em>Texto enfatizado</em>
+     <br>
+     <mark>Texto marcado</mark>
+     <br>
+     <small>Texto pequenino</small>
+     <br>
+     <del>Texto traçado</del>
+     <br>
+     <u>Texto sublinhado</u>
+     <br>
+     Log<sub>10</sub>
+     <br>
+     Base<sup>expoente</sup>
+
+     </html>
