--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
-<html>
-     <!--formatação de textos-->
-     <b>Texto em negrito</b>
-     <br>
-     <strong>Texto importante</strong>
-     <br>
-     <i>Texto itálico</i>
-     <br>
-     <em>Texto enfatizado</em>
-     <br>
-     <mark>Texto marcado</mark>
-     <br>
-     <small>Texto pequenino</small>
-     <br>
-     <del>Texto traçado</del>
-     <br>
-     <u>Texto sublinhado</u>
-     <br>
-     Log<sub>10</sub>
-     <br>
-     Base<sup>expoente</sup>
+     <!DOCTYPE html>   <!--Define a versão 5 do HTML-->
+ <html>            <!--delimitação do HMTL-->
+     <head>
 
-     </html>
+      </head>
+
+     <body>
+     <h1>titulo do meu site</h1>
+     <p><i>primeiro</i><b>parágrafo do meu site<b></p>
+     <p><del>primeiro</i><b>parágrafo do meu site<b></p>
+     <p><u>primeiro</i><b>parágrafo do meu site<b></p>
+
+
+     
+          <!--formatação de textos-->
+          <b>Texto em negrito</b>
+          <br>
+          <strong>Texto importante</strong>
+          <br>
+          <i>Texto itálico</i>
+          <br>
+          <em>Texto enfatizado</em>
+          <br>
+          <mark>Texto marcado</mark>
+          <br>
+          <small>Texto pequenino</small>
+          <br>
+          <del>Texto traçado</del>
+          <br>
+          <u>Texto sublinhado</u>
+          <br>
+          Log<sub>10</sub>
+          <br>
+          Base<sup>expoente</sup>
+          </body>
+          </html>
