--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
      <!DOCTYPE html>   <!--Define a versão 5 do HTML-->
- <html>            <!--delimitação do HMTL-->
+ <html>    lang="pt-br" > <!--delimitação do HMTL-->
      <head>
+        <meta charset="UTF-8"
+        <!--css na tag style-->
+        <style>
+            h2{
 
+                color:rgb(7, 201, 185);
+                border: dotted 5px rgba(60, 0, 172, 0.336)
+
+            }
+        </style>
+        <link rel="stylesheet" href="style.css"
       </head>
 
      <body>
@@ -9,28 +19,25 @@
      <p><i>primeiro</i><b>parágrafo do meu site<b></p>
      <p><del>primeiro</i><b>parágrafo do meu site<b></p>
      <p><u>primeiro</i><b>parágrafo do meu site<b></p>
-
-
-     
-          <!--formatação de textos-->
-          <b>Texto em negrito</b>
-          <br>
-          <strong>Texto importante</strong>
-          <br>
-          <i>Texto itálico</i>
-          <br>
-          <em>Texto enfatizado</em>
-          <br>
-          <mark>Texto marcado</mark>
-          <br>
-          <small>Texto pequenino</small>
-          <br>
-          <del>Texto traçado</del>
-          <br>
-          <u>Texto sublinhado</u>
-          <br>
-          Log<sub>10</sub>
-          <br>
-          Base<sup>expoente</sup>
-          </body>
-          </html>
+      <!--formatação de textos-->
+      <b>Texto em negrito</b>
+      <br>
+      <strong>Texto importante</strong>
+      <br>
+      <i>Texto itálico</i>
+      <br>
+      <em>Texto enfatizado</em>
+      <br>
+      <mark>Texto marcado</mark>
+      <br>
+      <small>Texto pequenino</small>
+      <br>
+      <del>Texto traçado</del>
+      <br>
+      <u>Texto sublinhado</u>
+      <br>
+      Log<sub>10</sub>
+      <br>
+      Base<sup>expoente</sup>
+      </body>
+    </html>
