--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </style>
         <link rel="stylesheet" href="style.css"
       </head>
+      <img id="imagem1"scr="corinthians.jpg" alt="corinthians">
 
      <body>
      <h1>titulo do meu site</h1>
