--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
      <!DOCTYPE html>   <!--Define a versão 5 do HTML-->
- <html>    lang="pt-br" > <!--delimitação do HMTL-->
-     <head>
-        <meta charset="UTF-8"
-        <!--css na tag style-->
-        <style>
-            h2{
+ <html>    lang="pt-br" > <!--delimitação do HMTL e defiição da origem do site-->
 
-                color:rgb(7, 201, 185);
-                border: dotted 5px rgba(60, 0, 172, 0.336)
+     <head><!-- área de configuração invisível do site-->
+        <meta charset="UTF-8"> <!--definição de carateres e símbolos mundiais-->
+        <link rel="stylesheet" href="style.css"> <!--conectando o style.css-->
+    </head>
 
-            }
-        </style>
-        <link rel="stylesheet" href="style.css"
-      </head>
+     <body> <!--área visível do site, onde aparecerá o todo o conteúdo-->
       <img id="imagem1"scr="corinthians.jpg" alt="corinthians">
+     <h1> style="color
+     <h2>corinthians</h2>
+     <p>
+  
+     <div id="conteúdo-lista"> <!--Tag div, serve para dividir o conteúdo da-->
+        <h3>Lista de nomes não-ordenadas</h3>
+        <ul>
+          <li> Nome em homenagem a outro time </li>
+          <li>Mascote surgiu após publicação em jornal</li>
+          <li>O hino do Corinthians foi composto em 1953, pelo radialista e compositor Lauro D’Avila. </li>
 
-     <body>
-     <h1>titulo do meu site</h1>
-     <p><i>primeiro</i><b>parágrafo do meu site<b></p>
-     <p><del>primeiro</i><b>parágrafo do meu site<b></p>
-     <p><u>primeiro</i><b>parágrafo do meu site<b></p>
+        </ul>
+
       <!--formatação de textos-->
       <b>Texto em negrito</b>
       <br>
