--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
      <head><!-- área de configuração invisível do site-->
         <meta charset="UTF-8"> <!--definição de carateres e símbolos mundiais-->
         <link rel="stylesheet" href="style.css"> <!--conectando o style.css-->
-    </head>
+        <a href="index2.html/">Link do site 2</a>
+      </head>
 
      <body> <!--área visível do site, onde aparecerá o todo o conteúdo-->
       <img id="imagem1"scr="corinthians.jpg" alt="corinthians">
