--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
      <body> <!--área visível do site, onde aparecerá o todo o conteúdo-->
         <img id="imagem1"src="corinthians.jpg" alt="corinthians">
-        <h1>TITULO</h1>
+        <h1>Corinthians</h1>
         <a href="index2.html/">Link do site 2</a>
         <h2>corinthians</h2>
         <p>
