--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
       
         <div id="conteúdo-lista"> <!--Tag div, serve para dividir o conteúdo da-->
-            <h3>Lista de nomes não-ordenadas</h3>
+            <h3>melhores sempre</h3>
             <ul>
               <li> Nome em homenagem a outro time </li>
               <li>Mascote surgiu após publicação em jornal</li>
