--- a/index2.html/index2.html
+++ b/index2.html/index2.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
    <head>
-     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style2.css">
+      <meta charset="UTF-8">
+      <link rel="stylesheet" href="style2.css">
+      <title>Página 2</title>
    </head>
    <body>
-     <header>
-        <h1>Página 2</h1>
-     </header>
-     <main>
+    <header>
+       <h1>Página 2</h1>
+       <img src="aurora.jpg" alt="aurora boreau">
+</header>
+<main>
 
-     </main>
-     <footer>
+</main>
+<footer>
 
-     </footer>
+</footer>
 
-   </body> 
+  </body>
 </html>
