--- a/index2.html/index2.html
+++ b/index2.html/index2.html
@@ -6,9 +6,9 @@
       <title>Página 2</title>
    </head>
    <body>
-    <header>
-       <h1>Página 2</h1>
-       <img src="aurora.jpg" alt="aurora boreau">
+    <header class="cabecalho">
+       <h1 class="cabecalho-título">Página 2</h1>
+       <img src="aurora.jpg" alt="aurora boreau" class="cabecalho-imagem"
 </header>
 <main>
 
