--- a/index2.html/index2.html
+++ b/index2.html/index2.html
@@ -10,8 +10,13 @@
        <h1 class="cabecalho-título">Página 2</h1>
        <img src="aurora.jpg" alt="aurora boreau" class="cabecalho-imagem"
 </header>
-<main>
-
+<main class="principal">
+    <h1>Título + imagem + parágrafo</h1>
+    <div class="caixa">
+       <h2>Corinthians</h2>
+       <img src="corinthians.png" alt="efeito corinthians">
+       <p>Melhores do corinthians</p>
+    </div>
 </main>
 <footer>
 
