--- a/index2.html/index2.html
+++ b/index2.html/index2.html
@@ -14,7 +14,7 @@
     <h1>Título + imagem + parágrafo</h1>
     <div class="caixa">
        <h2>Corinthians</h2>
-       <img src="corinthians.png" alt="efeito corinthians">
+       <img src="corinthians.png" alt="efeito corinthians" id="">
        <p>Melhores do corinthians</p>
     </div>
 </main>
