projeto se-liga

--- a/index.html
+++ b/index.html
@@ -25,4 +25,16 @@
 
       
       </body>
-    </html>
+    </html> 
+    lista de asções de comprementimento
+    <ol>
+    <LI>Item número um.</LI>
+    <LI>Item número dois.</LI>
+    <LI>Item número três.</LI>
+    </ol>
+   Lista de não ordenada
+   <UL>
+    <LI>Primeiro item.</LI>
+    <LI>Segundo item.</LI>
+    <LI>Terceiro item.</LI>
+   </UL>
